<resources>
    <string name="app_name">Get Rexi</string>
    <string name="title_adopt">Adopt</string>
    <string name="title_my_pets">My Pets</string>
    <string name="title_settings">Settings</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="action_sign_in">Next</string>
    <string name="action_update_account">Update</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_name">Name must be >3 characters</string>
    <string name="invalid_phone">Phone must be valid</string>
    <string name="EmailLabel">Email</string>
    <string name="PasswordLabel">Password</string>
    <string name="nameLabel">Name</string>
    <string name="phoneLabel">Phone</string>
    <string name="title_activity_register">RegisterActivity</string>

    // Auth
    <string name="login_failed">"Login failed"</string>
    <string name="register_failed">"Register failed"</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="promt_phone">Phone</string>
    <string name="dogNameLabel">Dog Name</string>
    <string name="prompt_dogName">Dog Name</string>
    <string name="dogAgeLabel">Age</string>
    <string name="prompt_dogAge">Age</string>
    <string name="dogBreedLabel">Breed</string>
    <string name="prompt_dogBreed">Breed</string>
    <string name="add_dog">Add Dog</string>
    <string name="prompt">Select an option</string>

</resources>