<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_adopt">

    <fragment
        android:id="@+id/navigation_adopt"
        android:name="com.ronsapir.getRexi.ui.Adopt.AdoptFragment"
        android:label="@string/title_adopt"
        tools:layout="@layout/fragment_adopt" >
        <action
            android:id="@+id/action_navigation_adopt_to_addDogFragment"
            app:destination="@id/addDogFragment" />
        <action
            android:id="@+id/action_navigation_adopt_to_dogDetailsFragment"
            app:destination="@id/dogDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_my_pets"
        android:name="com.ronsapir.getRexi.ui.MyPets.MyPetsFragment"
        android:label="@string/title_my_pets"
        tools:layout="@layout/fragment_my_pets" >
        <action
            android:id="@+id/action_navigation_my_pets_to_addDogFragment"
            app:destination="@id/addDogFragment" />
        <action
            android:id="@+id/action_navigation_my_pets_to_dogDetailsFragment"
            app:destination="@id/dogDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/dogDetailsFragment"
        android:name="com.ronsapir.getRexi.auth.data.DogDetailsFragment"
        android:label="Dog Details"
        tools:layout="@layout/fragment_dog_details">
        <argument
            android:name="Dog"
            app:argType="com.ronsapir.getRexi.auth.data.model.Dog" />
    </fragment>
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.ronsapir.getRexi.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/addDogFragment"
        android:name="com.ronsapir.getRexi.auth.data.AddOrEditDogFragment"
        android:label="@string/add_dog"
        tools:layout="@layout/fragment_add_or_edit_dog">
        <argument
            android:name="Dog"
            app:argType="com.ronsapir.getRexi.auth.data.model.Dog"
            app:nullable="true" />
        <argument
            android:name="title"
            app:argType="string"/>
    </fragment>
</navigation>