<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auth.data.AddOrEditDogFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="45dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/dogImg"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_marginTop="8dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/dog_solid" />

                <ImageButton
                    android:id="@+id/galleryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:layout_margin="10dp"
                    android:contentDescription="gallery button"
                    android:minHeight="48dp"
                    android:src="@drawable/ic_baseline_image_search_24" />

                <ImageButton
                    android:id="@+id/cameraButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:layout_margin="10dp"
                    android:contentDescription="camera button"
                    android:minHeight="48dp"
                    android:src="@drawable/ic_baseline_photo_camera_24" />

            </FrameLayout>

            <TextView
                android:id="@+id/dogNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/dogNameLabel"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:fontFamily="@font/comfortaa"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dogName"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:layout_width="337dp"
                android:layout_height="48dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/prompt_dogName"
                android:inputType="text"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/EmailLabel" />

            <TextView
                android:id="@+id/dogAgeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/dogAgeLabel"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:fontFamily="@font/comfortaa"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dogAge"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:layout_width="337dp"
                android:layout_height="48dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/prompt_dogAge"
                android:inputType="number"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/EmailLabel" />

            <TextView
                android:id="@+id/dogBreedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/dogBreedLabel"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:fontFamily="@font/comfortaa"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dogBreed"
                style="@style/Widget.AppCompat.AutoCompleteTextView"
                android:layout_width="337dp"
                android:layout_height="48dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/prompt_dogBreed"
                android:inputType="text"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/EmailLabel" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/actions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/saveBtn"
                    android:layout_width="174dp"
                    android:layout_height="55dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="#1F1818"
                    android:scaleType="fitCenter"
                    android:text="SAVE"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.067"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat"
                    app:layout_constraintVertical_bias="1.0"
                    tools:ignore="NotSibling" />

                <Button
                    android:id="@+id/cancelBtn"
                    android:layout_width="165dp"
                    android:layout_height="55dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:scaleType="fitCenter"
                    android:text="CANCEL"
                    android:textColor="@color/black"
                    android:textColorHint="#E9FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.934"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat"
                    app:layout_constraintVertical_bias="1.0"
                    tools:ignore="NotSibling" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>